# shiroikuma-jiyusagyoban

./: .gitignore  AUDIT_COMPLETE.md  CHANGELOG.md  CLAUDE.md  LOGO_PROMPT.md  PHASE_5_CHECKPOINT.md  README.md  RESEARCH.md  ROADMAP.md  build.gradle.kts  build.sh  build_debug.bat  build_output.txt  build_wrapper.bat  gradle.properties  gradlew  gradlew.bat  hand-off.md  settings.gradle.kts
.claude/: settings.json
.claude/skills/build-apk/: SKILL.md
.claude/skills/literate-bundles/: SKILL.md
.claude/skills/publish-version/: SKILL.md
.claude/skills/task-spec/: SKILL.md
.claude/skills/upstream-new-version/: SKILL.md
.claude/skills/workspace-mirror/: SKILL.md
.github/workflows/: build-release.yml  build.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.opentasker.automation.data.AutomationDatabase/: 1.json
app/src/main/cpp/: CMakeLists.txt  evgrab.c
docs/: ARCHITECTURE.md  DEPENDENCY_MODERNIZATION.md  EXTERNAL_INTENTS.md  FDROID_READINESS.md  FOSS_GEOFENCING.md  IMPROVEMENT_PLAN.md  LOCALE_PLUGIN_HOST.md  OPEN_JSON_BUNDLE.md  PROFILE_SHARING.md  SCENES.md  SHIZUKU.md  TASKER_XML_IMPORT.md  TEMPLATE_EXPRESSIONS.md  TERMUX_SCRIPTING.md  VISUAL_FLOW.md  bundle-schema.md  projects-design.md
docs/research/: iter-1-roadmap-recommendations.md  raw-research-output.txt
fdroid/config/: categories.yml
fdroid/metadata/: com.opentasker.app.yml
gradle/: libs.versions.toml  verification-metadata.xml
tools/: collect-calendar-sun-evidence.ps1  collect-location-evidence.ps1  validate-locale-plugin.ps1  verify-fdroid-release.ps1
(+390 files in other folders)
